fix(core): break words in notifications to prevent overflow (#9665)

--- a/packages/core/src/widgets/notifier/notifier.component.less
+++ b/packages/core/src/widgets/notifier/notifier.component.less
@@ -5,6 +5,11 @@
     color: var(--color-text-primary);
   }
 
+  .Toastify__toast-body {
+    overflow: hidden;
+    overflow-wrap: break-word;
+  }
+
   .Toastify__toast--info {
     background-color: var(--color-status-info-light);
 
